# zoli

./: .gitignore  LICENSE  stack.yaml  zoli.cabal  zoli.sublime-project
examples/c/: .gitignore  build.hs
src/: Zoli.hs
src/Zoli/: Core.hs  Database.hs  Pattern.hs  Timestamp.hs
src/Zoli/Run/: Dumb.hs
tests/: tests.hs
