name:                zoli
version:             0.1.0.0
synopsis:            Typed build system
description:         Please see README.md
homepage:            http://github.com/bitonic/zoli#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2015 Francesco Mazzoli
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Zoli
                     , Zoli.Core
                     , Zoli.Pattern
                     , Zoli.Run.Dumb
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , free
                     , transformers
                       -- Stuff needed for runners
                     , unix
                     , directory
                     , filepath
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , zoli
                     , HUnit
  ghc-options:         -Wall
  default-language:    Haskell2010

executable example-c
  hs-source-dirs:      examples/c
  main-is:             build.hs
  build-depends:       base
                     , zoli
                     , shake
                     , transformers
                     , filepath
                     , directory
  ghc-options:         -Wall
  default-language:    Haskell2010
